# WirelessIncome

./: .gitignore  README.md  config.py  example_notebook.ipynb  lib.py  main.py  nhgis0001_ds266_2023_state.csv  nhgis0001_ds266_2023_state_codebook.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  setup-mac.sh  setup-uv-env.sh
.github/: copilot-instructions.md
docs/: Digital_Divide_Research_Report.docx  ols_analysis.md  ols_model.txt
docs/prompts/: claude_research.md
notebooks/ericbusboom/: 01_census_tracts.ipynb  01a_population.ipynb  02_ookla_data.ipynb  02b_census_planning_2023.ipynb  02c_tract_characteristics.ipynb  03_merge.ipynb  03_ols.ipynb  04_ols.ipynb  04_ols.ipynb.out  census_tracts.ipynb  ols.ipynb  ookla.ipynb  ookla_data.ipynb
notebooks/maxbusboom/: 01_population.ipynb  02_ookla_data.ipynb  03_ols.ipynb
notebooks/maxbusboom/2019_q1/: 01_census_tracts.ipynb  02_ookla_data.ipynb  03_ols.ipynb
notebooks/maxbusboom/new/: 01_census_tracts.ipynb  01a_population.ipynb  02_ookla_data.ipynb  02c_tract_characteristics.ipynb  03_merge.ipynb  04_descriptive.ipynb  04_ols.ipynb
src/: tract_map_dec_2023.csv
test/: s3_tree.py
