[project]
name = "wireless-income"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.11.0",
    "boto3>=1.41.5",
    "flake8>=7.3.0",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "pyproj>=3.7.2",
    "rtree>=1.4.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "statsmodels>=0.14.5",
    "xlrd>=2.0.2",
]
